--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=hr-payroll
 server.port=8002
-hr-worker.ribbon.listOfServers=localhost:8006,localhost:8005
+eureka.client.service-url.defaultZone=http://localhost:8761
